--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
 }
 
@@ -164,26 +164,47 @@ ul#menu a {
 
 }
 
-#my-blogs {
+#my-blogs-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#my-blogs-list {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 20px;
 }
 
-#my-blogs div.my-blogs-item {
+#my-blogs-list div.my-blogs-item {
     flex: 0 1 270px;
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-#my-blogs div.blog-title {
+#my-blogs-list div.blog-title {
     border-bottom: 1px solid #bfbfbf;
+    padding-bottom: 15px;
+}
+
+#my-blogs-list div.blog-title h3, #blog-feed #blog-feed-list div.blog-feed-header h3 {
+    margin-top: 4px;
+    margin-bottom: 0;
+}
+
+#my-blogs-list div.blog-title p {
+    margin-top: 4px;
+    margin-bottom: 15px;
+}
+
+#my-blogs-list div.blog-title p {
+    font-size: 0.9rem;
 }
 
 #blog-view {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     gap: 15px;
 }
 
@@ -195,13 +216,70 @@ ul#menu a {
 
 #blog-view .blog-view-item p.information {
     font-style: italic;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
+    margin-top: 20px;
 }
 
-#blog-view .blog-view-item #view-blog p {
+#blog-view .blog-view-item div#view-blog {
+   border-top: 1px solid #bfbfbf;
+   padding-top: 10px;
+}
+
+#blog-view .blog-view-item div#view-blog p {
     font-size: 1.2rem;
     line-height: 3ch;
 }
+
 #blog-view div.blog-view-item div.alert-danger {
     padding: 10px;
+}
+
+.category {
+    padding: 8px 15px 8px 15px;
+    font-size: 0.8rem;
+    border-radius: 15px;
+    width: 120px;
+    border: 1px solid;
+}
+
+#blog-categories ul {
+    margin: 0;
+    padding: 0;
+}
+
+#blog-categories ul > li {
+    display: inline-block;
+    margin-right: 30px;
+}
+
+#blog-feed-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-top: 15px;
+}
+
+#blog-feed-list > div.blog-feed-item {
+    flex: 0 1 270px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+#blog-feed #blog-feed-list div.blog-feed-header h3 {
+    margin-bottom: 15px;
+}
+
+#blog-feed #blog-feed-list div.blog-feed-header p {
+    margin: 5px 0px 0px 0px;
+    font-size: 0.9rem;
+    color: #78909C;
+}
+
+#blog-feed #blog-feed-list div.blog-feed-body {
+    border-top: 1px solid #BFBFBF;
+    margin-top: 10px;
+}
+
+#blog-feed #blog-feed-list div.blog-feed-header p.blog-feed-author {
+  font-style: italic;
 }
